# xiccd

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  configure.ac  xiccd.desktop
assets/: xiccd.8
assets/autostart/: xiccd.service (user)
assets/autostart/by systemd user/: functions.sh  xiccd.service
assets/autostart/by xdg/: xiccd.desktop
assets/xiccd/: build.sh
assets/xiccd/sources/: Makefile.am  configure.ac  icc.h  randr-conn-private.c  randr-conn-private.h  randr-conn.h
doc/: xiccd.8
docs/: dependencies  dependencies.txt  license  license.txt
etc/systemd/: functions.sh  xiccd.service
etc/xdg/: xiccd.desktop
init/: install.sh
source/: edid.c  randr-conn-private.h  randr-conn.c  randr-conn.h  xiccd.c
src/: Makefile.am  dmi.c  dmi.h  edid.c  edid.h  icc-storage-private.c  icc-storage-private.h  icc-storage.c  icc-storage.h  icc.c  icc.h  randr-conn-private.c  randr-conn-private.h  randr-conn.c  randr-conn.h  xiccd.c
systemd/: install.sh
